--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ span.menu {
   margin-right: 13em;
 }
 .header{
-	background: url(../images/madhura5.jpg) no-repeat 0px -200px;
+	background: url(../images/madhura5.JPG) no-repeat 0px -200px;
 	
   background-size: cover;
   min-height: 600px;
